devscripts (2.10.71) UNRELEASED; urgency=low

  [ Christoph Berg ]
  * debcommit (git): Don't treat "no files to commit" as an error when called
    with --release, otherwise it is not possible to tag after the final build.

 -- Christoph Berg <myon@debian.org>  Sat, 12 Feb 2011 14:26:10 +0100

devscripts (2.10.70) unstable; urgency=low

  [ James Vega ]
  * debuild:
    + Properly quote shell variable when parsing options.  (Closes: #556248)
    + Don't treat “-nc” as implying binary only build.  (Closes: #607303)
    + Add recognition of dpkg-buildpackage's “-A” option for building only
      binary independent packages.
  * pts-subscribe: Handle “--until 0” the same as “--forever”.  (Closes:
    #604740)
  * uscan:
    + Update documentation to use “.+” instead of “.*” in groupings.  Thanks
      to Ben Finney for the patch.  (Closes: #606060)
    + Add “target” element to --dehs' XML, specifying the name of the
      downloaded file.  (Closes: #598514)
  * debcheckout: Use the correct prototype for set_destdir.  (Closes: #606053)
  * Use “mktemp --tmpdir” instead of specifying an absolute path under /tmp.
    (Closes: #610027)
  * Fix a typo in debchange(1).  (Closes: #610192)
  * bts: Make the message number optional for the “summary” sub-command.  This
    allows clearing an already set summary.  (Closes: #610326)
  * rmadison: Document udd url shorthand, added in 2.10.62.  (Closes: #589437)
  * Use appropriate typography for literal vs. replacement text in man pages.
    Thanks to David Prévot for the patch and French translation updates.
    (Closes: #600212)
  * dd-list: Ignore extraneous whitespace.  (Closes: #595251)
  * build-rdeps: Remove extraneous EOL whitespace in the output.  (Closes:
    #612500)
  * debian/control: Bump Standards-Version to 3.9.1.0 -- no changes necessary.

  [ Christoph Berg ]
  * debcheckout: For debian-dir-only repositories, also retrieve the source
    package, unpack it, and move the missing files over. Add a new option